--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         type=module></script>
     <script src="https://unpkg.com/three@0.170.0/build/three.module.js" type=module></script>
     <script src=https://littlejs-static-git-main-sam2much96s-projects.vercel.app/js/littlejs.min.js></script>
-
+    <script src=https://www.unpkg.com/howler@2.1.3/dist/howler.min.js type="module"></script>
     <script src=game.js?1100 type=module></script>
 </body>
