--- a/index.html
+++ b/index.html
@@ -66,9 +66,5 @@
 
     <!-- UI Layer (LittleJS Canvas or 2D Overlays) -->
     <canvas id="littlejs-ui-layer" class="layer"></canvas>
-    <script src=https://littlejs-static.vercel.app/js/zzfx/ZzFX.js?1100 type=module></script>
-    <script src="https://unpkg.com/three@0.170.0/build/three.module.js" type=module></script>
-    <script src=https://littlejs-static.vercel.app/js/littlejs.min.js></script>
-    <script src=https://www.unpkg.com/howler@2.1.3/dist/howler.min.js type="module"></script>
-    <script src=game.js?1100 type=module></script>
+    <script src=game.ts?1100 type=module></script>
 </body>
