--- a/index.html
+++ b/index.html
@@ -6,52 +6,8 @@
     <meta name=apple-mobile-web-app-capable content=yes>
     <meta name=mobile-web-app-capable content=yes>
     <link rel=icon type=image/png href=../favicon.png>
+    <link rel="stylesheet" href="./styles.css">
 </head>
-<style>
-    /* 
-    CSS Stylesheet
-    Separate Each element into Different Layers in The CSS Style Sheet 
-    
-    (1) Background Layer Is Set To transparent
-    */
-    body {
-        margin: 0;
-        overflow: hidden;
-        /* Prevent scrolling */
-    }
-
-    .layer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    #background-layer {
-        z-index: -1;
-        /* Rendered at the bottom */
-        background: #ff2c2c;
-        /* Example background color */
-    }
-
-    #threejs-layer {
-        z-index: 0;
-        /* Three.js canvas in the middle */
-    }
-
-    #littlejs-2d-layer {
-        z-index: 1;
-        /* LittleJS or 2D overlay on top */
-    }
-
-    #littlejs-ui-layer {
-        z-index: 2;
-        /* LittleJS or 2D overlay on top */
-        pointer-events: none;
-        /* Allow clicks to pass through */
-    }
-</style>
 
 <body>
     <!--Create Divs for Each Canvas Layer for UI and 3D -->
@@ -66,5 +22,5 @@
 
     <!-- UI Layer (LittleJS Canvas or 2D Overlays) -->
     <canvas id="littlejs-ui-layer" class="layer"></canvas>
-    <script src=game.ts?1100 type=module></script>
+    <script src=game.ts type=module></script>
 </body>
