--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 <body>
     <!--Create Divs for Each Canvas Layer for UI and 3D -->
     <!-- Background Layer -->
-    <div id="background-layer" class="layer"></div>
-    <div id="threejs-layer" class="layer"></div>
+    <div id="background-layer" ></div>
+    <div id="threejs-layer" ></div>
     
-    <canvas id="threejs-layer" class="layer"></canvas>
-    <canvas id="littlejs-2d-layer" class="layer"></canvas>
 
     <script src=game.ts type=module></script>
 </body>
