--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset=utf-8>
     <meta name=apple-mobile-web-app-capable content=yes>
     <meta name=mobile-web-app-capable content=yes>
-    <link rel=icon type=image/png href=../favicon.png>
+    <link rel=icon type=image/png href=./favicon.png>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
